fix menu z-index

--- a/_includes/css/layout.css
+++ b/_includes/css/layout.css
@@ -28,6 +28,7 @@
   height: calc(100vh - 85px);
   position: fixed;
   top: 85px;
+  z-index: 1;
 }
 .ly-content {
   grid-area: content;
